make sure the error message in full screen mode doesn't move the buttons out of view

--- a/www/css/style.less
+++ b/www/css/style.less
@@ -24,6 +24,13 @@ body {
     margin-bottom: 5px;
   }
   
+  .fullscreen #severeError {
+    position: absolute;
+    left: 0;
+    top: 0;
+    margin: 15px;
+  }
+
   #screenshots {
     .imgbox {
       width: 320px;
